<resources>
    <string name="app_name">PortfolioApp</string>

    <string name="android_spotify_streamer">Spotify Streamer</string>
    <string name="android_scores_app">Scores App</string>
    <string name="android_library_app">Library App</string>
    <string name="android_build_it_bigger">Build It Bigger</string>
    <string name="android_xyz_reader">XYZ Reader</string>
    <string name="android_capstone">Capstone: My own app</string>

</resources>
