<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="My Nanodegree Apps!"
        android:textSize="22sp"
        android:padding="12dp"
        android:gravity="center"
        android:layout_marginTop="18dp"/>

    <Button
        android:id="@+id/spotify_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/android_spotify_streamer"
        style="@style/DefaultButton.Orange"/>

    <Button
        android:id="@+id/scores_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/android_scores_app"
        style="@style/DefaultButton.Orange"/>

    <Button
        android:id="@+id/library_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/android_library_app"
        style="@style/DefaultButton.Orange"/>

    <Button
        android:id="@+id/build_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/android_build_it_bigger"
        style="@style/DefaultButton.Orange"/>

    <Button
        android:id="@+id/xyz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/android_xyz_reader"
        style="@style/DefaultButton.Orange"/>

    <Button
        android:id="@+id/capstone_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/android_capstone"
        style="@style/DefaultButton.Orange"/>

</LinearLayout>